# spanish-flashcard-builder

./: .cursorignore  .cursorrules  .gitignore  .pre-commit-config.yaml  README.md  config.py  config.yml  pyproject.toml  setup.py  vocab_selector.py
spanish_flashcard_builder/: cli.py  config.py  exceptions.py  utils.py
spanish_flashcard_builder/augmentation/: augmentor.py  models.py  openai_api.py
spanish_flashcard_builder/augmentation/prompts/: prompt_template.txt  system_instruction.txt
spanish_flashcard_builder/components/augmentation/: README.md  __main__.py  augmentor.py  io.py  models.py  openai_api.py
spanish_flashcard_builder/components/augmentation/prompts/: prompt_template.txt
spanish_flashcard_builder/components/data_cleaner/: README.md  __main__.py  spacy.py
spanish_flashcard_builder/components/image_selector/: README.md  __main__.py  components.py  constants.py  google_search.py  gui.py  image_loader.py  selector.py
spanish_flashcard_builder/components/vocab_selector/: README.md  __main__.py  commands.py  input_handler.py  models.py  mw_api.py  state.py  vocab_bank.py
spanish_flashcard_builder/config/: validation.py
spanish_flashcard_builder/data_cleaner/: __main__.py  spacy.py
spanish_flashcard_builder/enrichment/: __main__.py  enricher.py  io.py  models.py  openai_api.py
spanish_flashcard_builder/image_selector/: README.md  __main__.py  components.py  gui.py  image_loader.py  selector.py
spanish_flashcard_builder/pipeline/assemble/: __main__.py  assembler.py  generator.py  media.py  models.py  note_factory.py  template.py  templates.py
spanish_flashcard_builder/pipeline/assemble/templates/: english_to_spanish_back.html  english_to_spanish_front.html  example_sentences.html  spanish_to_english_front.html  spanish_vocab.css  spanish_vocab_back.html  spanish_vocab_front.html
spanish_flashcard_builder/pipeline/curate/: README.md  __main__.py  input_handler.py  mw_api.py  state.py  vocab_bank.py
spanish_flashcard_builder/pipeline/generate/: README.md  __main__.py  data_loader.py  generator.py  io.py  models.py  openai_api.py  persistence.py  reviewer.py
spanish_flashcard_builder/pipeline/generate/prompts/: prompt_template.txt
spanish_flashcard_builder/pipeline/images/: README.md  __main__.py  google_search.py  gui.py  image_loader.py  image_processor.py  selector.py
spanish_flashcard_builder/scripts/: clean.py  display_manifest.py  download_spacy_model.py  manifest.py  remove_flashcard_data.py  sanitize.py
spanish_flashcard_builder/vocab_selector/: README.md  __main__.py  commands.py  mw_api.py  state.py  vocab_bank.py
vocab_selector/: README.md  __main__.py  commands.py  input_handler.py  models.py  mw_api.py  spacy.py  state.py  storage.py  vocab_bank.py  vocab_selector.py
