[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spanish-flashcard-builder"
version = "0.1.0"
description = "A tool for building and managing Spanish vocabulary flashcards"
authors = [
    { name = "Bryson Thill" },
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.26.0",
    "python-dotenv>=0.19.0",
    "openai>=0.27.0",
    "pillow>=9.0.0",
    "spacy>=3.0.0",
    "click>=8.0.0",
    "pyyaml>=5.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.3",
    "pre-commit>=3.6.0",
    "types-requests>=2.31.0",
    "types-pillow>=10.2.0",
    "types-pyyaml>=6.0.12.12",
    "types-setuptools>=69.1.0"
]

[project.scripts]
spanish-flashcard-builder = "spanish_flashcard_builder.cli:main"
sfb = "spanish_flashcard_builder.cli:main"

[tool.setuptools]
packages = ["spanish_flashcard_builder"]

[tool.ruff]
line-length = 88
target-version = "py311"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Enable Pyflakes (`F`), pycodestyle (`E`), and isort (`I`) codes by default.
select = ["E", "F", "I", "B", "W", "C90"]
ignore = []
